--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1092e157",
+   "id": "37153dae",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f460471",
+   "id": "088dd748",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42a11d52",
+   "id": "75eb8ff9",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5db593d7",
+   "id": "ddc5d758",
    "metadata": {},
    "source": [
     "### References\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d3e9da5",
+   "id": "2515426a",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60786597",
+   "id": "45fa9d30",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8239eeb7",
+   "id": "d2cef343",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "833b4a82",
+   "id": "1b4ee3dc",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97ab25d8",
+   "id": "ac35a948",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf14924c",
+   "id": "3915902a",
    "metadata": {
     "hide-output": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9cd656a",
+   "id": "0fbd9d8d",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3ddc3f7",
+   "id": "d256de99",
    "metadata": {
     "hide-output": false
    },
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d91e7224",
+   "id": "fe6c2947",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6850673d",
+   "id": "d5d97c23",
    "metadata": {
     "hide-output": false
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baf56411",
+   "id": "7326fe3d",
    "metadata": {},
    "source": [
     "From the first-order condition with respect to capital, the firm’s inverse demand for capital is\n",
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ed7a3fd",
+   "id": "d3657dd6",
    "metadata": {
     "hide-output": false
    },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1ef9f64",
+   "id": "14dc0ce6",
    "metadata": {},
    "source": [
     "Using [(18.1)](#equation-equation-aiy-rgk) and the firm’s first-order condition for labor,\n",
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d83ab27c",
+   "id": "e45b6272",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ada4abf7",
+   "id": "d823f64f",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ef92bf5",
+   "id": "e135bed0",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5773344d",
+   "id": "3f028a6d",
    "metadata": {
     "hide-output": false
    },
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c8566d4",
+   "id": "1ee86e29",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "120d66bc",
+   "id": "a93db37f",
    "metadata": {},
    "source": [
     "For now we assume that $ u(c) = \\log(c) $.\n",
@@ -387,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a81ea12",
+   "id": "ec12f1a2",
    "metadata": {
     "hide-output": false
    },
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb14169b",
+   "id": "3a867975",
    "metadata": {},
    "source": [
     "Here’s a tuple that stores the wage rate and interest rate, as well as a function that creates a price namedtuple with default values."
@@ -407,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "384f3331",
+   "id": "7e171785",
    "metadata": {
     "hide-output": false
    },
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41f17952",
+   "id": "fb337af6",
    "metadata": {},
    "source": [
     "Now we set up a vectorized version of the right-hand side of the Bellman equation\n",
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121f7c60",
+   "id": "5ff88a8a",
    "metadata": {
     "hide-output": false
    },
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3c0ca1e",
+   "id": "aaf1f478",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58fb7def",
+   "id": "5efa8f77",
    "metadata": {
     "hide-output": false
    },
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4457f3e4",
+   "id": "11a08f95",
    "metadata": {},
    "source": [
     "The following function computes the array $ r_{\\sigma} $ which gives current\n",
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dbba7b1",
+   "id": "8d8a7f33",
    "metadata": {
     "hide-output": false
    },
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc7c2707",
+   "id": "82226a1e",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f325ace4",
+   "id": "5dee5bd2",
    "metadata": {
     "hide-output": false
    },
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ced8141b",
+   "id": "0ce8e687",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15c863d9",
+   "id": "7dec718e",
    "metadata": {
     "hide-output": false
    },
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54c9d3e0",
+   "id": "0150d8a7",
    "metadata": {},
    "source": [
     "Here’s the Howard policy iteration."
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2fc0b1a",
+   "id": "1abea6bd",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89f45a7c",
+   "id": "168a8d3f",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "775d0547",
+   "id": "3c5e2d6c",
    "metadata": {
     "hide-output": false
    },
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86fb08f3",
+   "id": "78ae7ec7",
    "metadata": {
     "hide-output": false
    },
@@ -699,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d63d10b5",
+   "id": "3b89df54",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4462c8e6",
+   "id": "4ad10f59",
    "metadata": {
     "hide-output": false
    },
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f243a9d5",
+   "id": "b66ba8a0",
    "metadata": {},
    "source": [
     "The next plot shows asset accumulation policies at different values of the exogenous state."
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24c9ad06",
+   "id": "70d48157",
    "metadata": {
     "hide-output": false
    },
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0c5f925",
+   "id": "997ccccb",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -772,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f6c7ce2",
+   "id": "97f93317",
    "metadata": {
     "hide-output": false
    },
@@ -807,7 +807,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "827cb41a",
+   "id": "9f0d8c47",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -816,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3d47a97",
+   "id": "61fa3ba3",
    "metadata": {
     "hide-output": false
    },
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8d46f39",
+   "id": "fb6a856e",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "afd69071",
+   "id": "50d24e6c",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -852,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e891c5c0",
+   "id": "28ddb948",
    "metadata": {
     "hide-output": false
    },
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e74ca77",
+   "id": "20d796eb",
    "metadata": {},
    "source": [
     "The next function computes aggregate capital supply by households under policy $ \\sigma $, given wages and interest rates."
@@ -872,7 +872,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5df952bc",
+   "id": "af67add3",
    "metadata": {
     "hide-output": false
    },
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7e48735",
+   "id": "8f4ff61a",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4506e52",
+   "id": "021d14b9",
    "metadata": {
     "hide-output": false
    },
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a869554",
+   "id": "4137cddc",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a71a8263",
+   "id": "671e250b",
    "metadata": {
     "hide-output": false
    },
@@ -966,7 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c55c42ea",
+   "id": "ecec3525",
    "metadata": {
     "hide-output": false
    },
@@ -982,7 +982,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84b188a4",
+   "id": "fbdec852",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1001,7 +1001,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3945ac15",
+   "id": "2c737fe8",
    "metadata": {
     "hide-output": false
    },
@@ -1026,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7b98dc8",
+   "id": "b451004d",
    "metadata": {
     "hide-output": false
    },
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0adf64c6",
+   "id": "d7f55195",
    "metadata": {},
    "source": [
     "This is not very fast, given how quickly we can solve the household problem.\n",
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "760ba13e",
+   "id": "792f0624",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f244132",
+   "id": "6db35aea",
    "metadata": {},
    "source": [
     "## Exercise 18.1\n",
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6852b6cc",
+   "id": "d76caba2",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.1](https://jax.quantecon.org/#aiyagari-ex1)"
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c07769e",
+   "id": "f4832c29",
    "metadata": {
     "hide-output": false
    },
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48d37218",
+   "id": "f194c415",
    "metadata": {},
    "source": [
     "We use bisection to find the zero of the function $ h(k) = k - G(k) $."
@@ -1109,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ca0a1b1",
+   "id": "0b8a0367",
    "metadata": {
     "hide-output": false
    },
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "408f842b",
+   "id": "23ef0159",
    "metadata": {
     "hide-output": false
    },
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c2875b9",
+   "id": "fa90ea42",
    "metadata": {},
    "source": [
     "Bisection seems to be faster than the damped iteration scheme."
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b366e347",
+   "id": "adf38efd",
    "metadata": {},
    "source": [
     "## Exercise 18.2\n",
@@ -1161,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "498e4484",
+   "id": "7ce26ff8",
    "metadata": {
     "hide-output": false
    },
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "012b4324",
+   "id": "96e48ee3",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.2](https://jax.quantecon.org/#aiyagari-ex2)"
@@ -1181,7 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2ac4579",
+   "id": "30fe77ef",
    "metadata": {
     "hide-output": false
    },
@@ -1200,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6da547c",
+   "id": "397faf9f",
    "metadata": {
     "hide-output": false
    },
@@ -1215,7 +1215,7 @@
   }
  ],
  "metadata": {
-  "date": 1732064317.4572656,
+  "date": 1741661034.420431,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
