--- a/autodiff.ipynb
+++ b/autodiff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0d8b5c57",
+   "id": "90c2623b",
    "metadata": {},
    "source": [
     "# Adventures with Autodiff"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accde7a7",
+   "id": "bb30aa1e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b023fbe",
+   "id": "2305d27e",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c039dae8",
+   "id": "ad48d1db",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80a093ab",
+   "id": "f6c2e3e4",
    "metadata": {},
    "source": [
     "Checking for a GPU:"
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e8a0802",
+   "id": "9eb6267a",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6cd35fd",
+   "id": "6cca932a",
    "metadata": {},
    "source": [
     "## What is automatic differentiation?\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b5f2ecc",
+   "id": "2f0a94ab",
    "metadata": {},
    "source": [
     "### Autodiff is not finite differences\n",
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bba53b3",
+   "id": "0bce1de8",
    "metadata": {
     "hide-output": false
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "235e8c6c",
+   "id": "dcd06c24",
    "metadata": {},
    "source": [
     "This kind of numerical derivative is often inaccurate and unstable.\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "687435bf",
+   "id": "1b91c99a",
    "metadata": {},
    "source": [
     "### Autodiff is not symbolic calculus\n",
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03f7a230",
+   "id": "8577210d",
    "metadata": {
     "hide-output": false
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87826ce1",
+   "id": "e23d86a4",
    "metadata": {},
    "source": [
     "Symbolic calculus is not well suited to high performance\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2203ce11",
+   "id": "4455eb7f",
    "metadata": {},
    "source": [
     "### Autodiff\n",
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e34800d8",
+   "id": "1e419961",
    "metadata": {},
    "source": [
     "## Some experiments\n",
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26eab484",
+   "id": "27851569",
    "metadata": {},
    "source": [
     "### A differentiable function\n",
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db85a82b",
+   "id": "368585a3",
    "metadata": {
     "hide-output": false
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7f67468",
+   "id": "e76291e4",
    "metadata": {},
    "source": [
     "We use `grad` to compute the gradient of a real-valued function:"
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c6a1d08",
+   "id": "7dc348f5",
    "metadata": {
     "hide-output": false
    },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cb94464",
+   "id": "a83b7bde",
    "metadata": {},
    "source": [
     "Let’s plot the result:"
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6d30cca",
+   "id": "1e63583d",
    "metadata": {
     "hide-output": false
    },
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16640bb4",
+   "id": "27eecdaa",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c74786d7",
+   "id": "e8516815",
    "metadata": {},
    "source": [
     "### Absolute value function\n",
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dccd778",
+   "id": "e12f4d48",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae7ef258",
+   "id": "240b8ea3",
    "metadata": {
     "hide-output": false
    },
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5336d550",
+   "id": "c95a365f",
    "metadata": {
     "hide-output": false
    },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80d67268",
+   "id": "7b2769a9",
    "metadata": {},
    "source": [
     "At the nondifferentiable point $ 0 $, `jax.grad` returns the right derivative:"
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e27a8f6",
+   "id": "a0b24030",
    "metadata": {
     "hide-output": false
    },
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ea00fda",
+   "id": "910f4dcb",
    "metadata": {},
    "source": [
     "### Differentiating through control flow\n",
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7866c682",
+   "id": "c1b49284",
    "metadata": {
     "hide-output": false
    },
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22af3c0a",
+   "id": "1dd51125",
    "metadata": {
     "hide-output": false
    },
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b72ed1c8",
+   "id": "bdb7f9fb",
    "metadata": {
     "hide-output": false
    },
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e913c08d",
+   "id": "57b15d9e",
    "metadata": {
     "hide-output": false
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f462235",
+   "id": "4e3576ce",
    "metadata": {},
    "source": [
     "### Differentiating through a linear interpolation\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce4e7586",
+   "id": "427c16fe",
    "metadata": {
     "hide-output": false
    },
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37a01d1e",
+   "id": "c56e4d95",
    "metadata": {
     "hide-output": false
    },
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a50248f0",
+   "id": "25dbd724",
    "metadata": {
     "hide-output": false
    },
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97d122a6",
+   "id": "1d9aa415",
    "metadata": {
     "hide-output": false
    },
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a86c6da",
+   "id": "bb142629",
    "metadata": {},
    "source": [
     "## Gradient Descent\n",
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f3a8cbd",
+   "id": "afdedc08",
    "metadata": {},
    "source": [
     "### A function for gradient descent\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f16ba34f",
+   "id": "7c800b71",
    "metadata": {
     "hide-output": false
    },
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a180cb00",
+   "id": "525407a6",
    "metadata": {},
    "source": [
     "### Simulated data\n",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a12e599c",
+   "id": "9a4be1d5",
    "metadata": {
     "hide-output": false
    },
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0b16313",
+   "id": "1bdc3786",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be68ae3e",
+   "id": "278d4805",
    "metadata": {},
    "source": [
     "Let’s start by calculating the estimated slope and intercept using closed form solutions."
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c8dc82a",
+   "id": "8359b822",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4bea063",
+   "id": "c3f35414",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b346404",
+   "id": "537c309a",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5255244e",
+   "id": "19aa147e",
    "metadata": {},
    "source": [
     "### Minimizing squared loss by gradient descent\n",
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67322969",
+   "id": "b9b28521",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27e04752",
+   "id": "c63e5be8",
    "metadata": {},
    "source": [
     "Now we minimize it:"
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69a02b3e",
+   "id": "1f3a02c6",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dde16c98",
+   "id": "3a982183",
    "metadata": {},
    "source": [
     "Let’s plot the results."
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "415b3b8e",
+   "id": "530c855d",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f4ec334",
+   "id": "0447c3d1",
    "metadata": {},
    "source": [
     "Notice that we get the same estimates as we did from the closed form solutions."
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "725667b6",
+   "id": "c3382485",
    "metadata": {},
    "source": [
     "### Adding a squared term\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6428316",
+   "id": "cabe0f0e",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06b56629",
+   "id": "d4f2cc9f",
    "metadata": {},
    "source": [
     "Now we’re minimizing in three dimensions.\n",
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e84b8cd7",
+   "id": "0bee1478",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1872404",
+   "id": "8fffce78",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59c368b5",
+   "id": "c67f65ce",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee5f5556",
+   "id": "8abdcb83",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#auto_ex1)\n",
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45aec9e0",
+   "id": "202e3eab",
    "metadata": {
     "hide-output": false
    },
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5215c0ee",
+   "id": "762eb9ba",
    "metadata": {
     "hide-output": false
    },
@@ -918,7 +918,7 @@
   }
  ],
  "metadata": {
-  "date": 1732064317.642531,
+  "date": 1741661034.4951465,
   "filename": "autodiff.md",
   "kernelspec": {
    "display_name": "Python",
