--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4a935da8",
+   "id": "aef760f1",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "794e4abf",
+   "id": "924ded4e",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e417127d",
+   "id": "4df7aeb9",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0d3697d",
+   "id": "44eacc83",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cf8e04c",
+   "id": "2348943e",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f180fe1",
+   "id": "19dfa6c4",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8217f74e",
+   "id": "3a086842",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0051e73b",
+   "id": "65191702",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9250a805",
+   "id": "d17f34ee",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ce6a575",
+   "id": "cf8aa93b",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65741898",
+   "id": "2646f151",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb90b250",
+   "id": "d5673540",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "304bd8ef",
+   "id": "39107e6a",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f399442",
+   "id": "197feb2f",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1100c28",
+   "id": "d504d885",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cefe915f",
+   "id": "a63fa3cf",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f79f465",
+   "id": "6a830bbf",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "436b640e",
+   "id": "94f24f2c",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ef7e183",
+   "id": "51350521",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fb2d81b",
+   "id": "59fe1218",
    "metadata": {
     "hide-output": false
    },
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f036b93b",
+   "id": "dbf61ce2",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6f9a78a",
+   "id": "3c2f02db",
    "metadata": {
     "hide-output": false
    },
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f297ffbb",
+   "id": "07d722f7",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -603,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb9801ff",
+   "id": "b67c708a",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cf1904e",
+   "id": "faf6db62",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d0f8d97",
+   "id": "a12ee9fa",
    "metadata": {
     "hide-output": false
    },
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8127e389",
+   "id": "6539292e",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +677,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccb52871",
+   "id": "6b5d9f40",
    "metadata": {
     "hide-output": false
    },
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65e7ba5d",
+   "id": "a2d0c77b",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abe4ae48",
+   "id": "d071c50a",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d38c8560",
+   "id": "0fdb66ee",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17e265ec",
+   "id": "befef576",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -764,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d40f924",
+   "id": "8fb2f299",
    "metadata": {
     "hide-output": false
    },
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef975fba",
+   "id": "fbe14cb9",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -790,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6771cfa9",
+   "id": "a08c478e",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b906d1b",
+   "id": "61fe0bf8",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de5e8892",
+   "id": "ef4f2ff1",
    "metadata": {
     "hide-output": false
    },
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9788d2ff",
+   "id": "9d0f8b7a",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -858,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a311ab41",
+   "id": "42750af5",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1dd1a9d",
+   "id": "d3862882",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a2de345",
+   "id": "e1c0e037",
    "metadata": {
     "hide-output": false
    },
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d9f1ecc",
+   "id": "7f93ccac",
    "metadata": {
     "hide-output": false
    },
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1facd8b3",
+   "id": "5e7efddf",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -938,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84f5f726",
+   "id": "815d69c0",
    "metadata": {
     "hide-output": false
    },
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a049351",
+   "id": "ee1df006",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6de7e89b",
+   "id": "3496cbc4",
    "metadata": {},
    "source": [
     "## Exercise 8.1\n",
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcf8f4c7",
+   "id": "8c8cbb8f",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 8.1](https://jax.quantecon.org/#lucas_ex1)"
@@ -986,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75c68a50",
+   "id": "c2aa78b4",
    "metadata": {
     "hide-output": false
    },
@@ -1009,7 +1009,7 @@
   }
  ],
  "metadata": {
-  "date": 1732064317.945228,
+  "date": 1741661034.9204247,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
