--- a/mle.ipynb
+++ b/mle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "71cce3b6",
+   "id": "8e007d3d",
    "metadata": {},
    "source": [
     "# Maximum Likelihood Estimation"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dcdf5e0",
+   "id": "cfa5c49e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a60c49e8",
+   "id": "fec06c09",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c635cdf4",
+   "id": "321cd4c1",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c143d88",
+   "id": "08ec04f1",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccd84811",
+   "id": "f218ceb7",
    "metadata": {
     "hide-output": false
    },
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e2dc6b4",
+   "id": "7b83b3e7",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3cd52151",
+   "id": "5fe03f92",
    "metadata": {
     "hide-output": false
    },
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69a03d29",
+   "id": "08bf8675",
    "metadata": {},
    "source": [
     "## MLE with numerical methods (JAX)\n",
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae83b3f5",
+   "id": "ebfa7eee",
    "metadata": {},
    "source": [
     "### A toy model\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54477cdb",
+   "id": "51fa4d0b",
    "metadata": {
     "hide-output": false
    },
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73b35dde",
+   "id": "024b01ba",
    "metadata": {},
    "source": [
     "To find the value of $ \\frac{d \\log \\mathcal{L(\\boldsymbol{\\beta})}}{d \\boldsymbol{\\beta}} $, we can use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html) which auto-differentiates the given function.\n",
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5e23567",
+   "id": "55070c5d",
    "metadata": {
     "hide-output": false
    },
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4ea2f94",
+   "id": "93159379",
    "metadata": {
     "hide-output": false
    },
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad2ef4ae",
+   "id": "16013b65",
    "metadata": {},
    "source": [
     "The plot shows that the maximum likelihood value (the top plot) occurs\n",
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a14371b5",
+   "id": "975f5364",
    "metadata": {},
    "source": [
     "### A Poisson model\n",
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b78ebaa6",
+   "id": "a32355a3",
    "metadata": {
     "hide-output": false
    },
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7db4e4fc",
+   "id": "6be4448e",
    "metadata": {},
    "source": [
     "The log likelihood function of the Poisson regression is\n",
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a55fad84",
+   "id": "5c381363",
    "metadata": {
     "hide-output": false
    },
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94a4398a",
+   "id": "f4207f68",
    "metadata": {},
    "source": [
     "Now we can define the log likelihood function in Python"
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fba719db",
+   "id": "ac3ae921",
    "metadata": {
     "hide-output": false
    },
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6d7bdeb",
+   "id": "97739bae",
    "metadata": {},
    "source": [
     "To find the gradient of the `poisson_logL`, we again use [jax.grad](https://jax.readthedocs.io/en/latest/_autosummary/jax.grad.html).\n",
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a0665b7",
+   "id": "6989d173",
    "metadata": {
     "hide-output": false
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46acc02a",
+   "id": "76d254ff",
    "metadata": {},
    "source": [
     "Our function `newton_raphson` will take a `RegressionModel` object\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9819f70d",
+   "id": "9cfac6d1",
    "metadata": {
     "hide-output": false
    },
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9207b775",
+   "id": "1d84e602",
    "metadata": {},
    "source": [
     "Let’s try out our algorithm with a small dataset of 5 observations and 3\n",
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84843e6d",
+   "id": "648f3fa4",
    "metadata": {
     "hide-output": false
    },
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "498abfaa",
+   "id": "ab7b01cc",
    "metadata": {},
    "source": [
     "As this was a simple model with few observations, the algorithm achieved\n",
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5080df7",
+   "id": "db3875b9",
    "metadata": {
     "hide-output": false
    },
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d9b6d31",
+   "id": "1bac6eb7",
    "metadata": {},
    "source": [
     "## MLE with `statsmodels`\n",
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46639d90",
+   "id": "4141af67",
    "metadata": {
     "hide-output": false
    },
@@ -516,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a08b20ca",
+   "id": "e0c38402",
    "metadata": {
     "hide-output": false
    },
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d986f72",
+   "id": "6ae401f1",
    "metadata": {},
    "source": [
     "The benefit of writing our own procedure, relative to statsmodels is that\n",
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e9443bc",
+   "id": "cb278617",
    "metadata": {},
    "source": [
     "## Exercise 21.1\n",
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cfc3621",
+   "id": "0101a6aa",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 21.1](https://jax.quantecon.org/#newton_mle1)\n",
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33032b8c",
+   "id": "6c82e784",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "132ff8a9",
+   "id": "c59a50d9",
    "metadata": {},
    "source": [
     "To simulate the model, we sample 500,000 values of $ x_t $ from the standard normal distribution."
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3b30da7",
+   "id": "b0cc94f0",
    "metadata": {
     "hide-output": false
    },
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eec664e",
+   "id": "fcd89ba1",
    "metadata": {},
    "source": [
     "We compute $ \\lambda $ using [(21.1)](#equation-lambda-mle)"
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6eedcdd",
+   "id": "d0313edb",
    "metadata": {
     "hide-output": false
    },
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "978d45f2",
+   "id": "50c3ca8b",
    "metadata": {},
    "source": [
     "Let’s define $ y_t $ by sampling from a Poisson distribution with mean as $ \\lambda_t $."
@@ -660,7 +660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24a4dc1d",
+   "id": "1753cccc",
    "metadata": {
     "hide-output": false
    },
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1ae7cc0",
+   "id": "56eaf7f1",
    "metadata": {},
    "source": [
     "Now let’s try to recover the true parameter values using the Newton-Raphson\n",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66b6f7eb",
+   "id": "4c2f26e5",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "276cd04a",
+   "id": "d8fa372d",
    "metadata": {},
    "source": [
     "The maximum likelihood estimates are similar to the true parameter values."
@@ -709,7 +709,7 @@
   }
  ],
  "metadata": {
-  "date": 1732064318.1419907,
+  "date": 1741661035.000734,
   "filename": "mle.md",
   "kernelspec": {
    "display_name": "Python",
