--- a/zreferences.ipynb
+++ b/zreferences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7128ea86",
+   "id": "76a413cd",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10e5ed45",
+   "id": "99d33b5d",
    "metadata": {},
    "source": [
     "# References\n",
@@ -28,7 +28,7 @@
   }
  ],
  "metadata": {
-  "date": 1732064318.3879535,
+  "date": 1741661035.368765,
   "filename": "zreferences.md",
   "kernelspec": {
    "display_name": "Python",
