--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "26a6634b",
+   "id": "a6dfaf1b",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3441e87",
+   "id": "b216633a",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f28ba61",
+   "id": "84e58044",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be804a4f",
+   "id": "c2f404aa",
    "metadata": {},
    "source": [
     "We study a monopolist who faces inverse demand curve\n",
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ad3f0b1",
+   "id": "d85df25d",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bef19807",
+   "id": "ea754cc2",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef8388e1",
+   "id": "8541337a",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1685a7a7",
+   "id": "21b7b421",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f5f68d0",
+   "id": "24e9ef19",
    "metadata": {
     "hide-output": false
    },
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a333635",
+   "id": "7bb95b1e",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a25fbe3",
+   "id": "e9c7ae7b",
    "metadata": {
     "hide-output": false
    },
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abaf2b2c",
+   "id": "3a3d9b38",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "054e8165",
+   "id": "cf18d110",
    "metadata": {
     "hide-output": false
    },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cb4faa2",
+   "id": "c745b4a9",
    "metadata": {},
    "source": [
     "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e071e9c2",
+   "id": "1bcfefea",
    "metadata": {
     "hide-output": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2ecf395",
+   "id": "603a6de4",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b4f4528",
+   "id": "a98b4818",
    "metadata": {
     "hide-output": false
    },
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0d57f2e",
+   "id": "8beff9aa",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -314,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3825e20",
+   "id": "ecedf12d",
    "metadata": {
     "hide-output": false
    },
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94852f75",
+   "id": "a7142222",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2502a25",
+   "id": "a797d34a",
    "metadata": {
     "hide-output": false
    },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9067ba91",
+   "id": "8a45125a",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73674d6b",
+   "id": "d5fbece5",
    "metadata": {
     "hide-output": false
    },
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efdb3959",
+   "id": "c00d4c51",
    "metadata": {},
    "source": [
     "Now we can define a function to compute $ v_{\\sigma} $"
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09fe84d6",
+   "id": "51aa3ce6",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f040038d",
+   "id": "fe15230f",
    "metadata": {},
    "source": [
     "We use successive approximation for VFI."
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6476de7",
+   "id": "467656d9",
    "metadata": {
     "hide-output": false
    },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "493337e2",
+   "id": "06caae17",
    "metadata": {},
    "source": [
     "For OPI we’ll add a compiled routine that computes $ T_σ^m v $."
@@ -521,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f259cef",
+   "id": "9f5bc911",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d56bacd",
+   "id": "9755872a",
    "metadata": {},
    "source": [
     "Finally, we introduce the solvers that implement VFI, HPI and OPI."
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6490ab3",
+   "id": "f728e408",
    "metadata": {
     "hide-output": false
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55cbbb91",
+   "id": "2df41cd2",
    "metadata": {},
    "source": [
     "For OPI we will use a compiled JAX `lax.while_loop` operation to speed execution."
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "865069a2",
+   "id": "295a663d",
    "metadata": {
     "hide-output": false
    },
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd4ab196",
+   "id": "36e93a5b",
    "metadata": {},
    "source": [
     "Here’s a friendly interface to OPI"
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28d09762",
+   "id": "78f37973",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1eb950f",
+   "id": "36dfa857",
    "metadata": {},
    "source": [
     "Here’s HPI"
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a2f488a",
+   "id": "b2185fdf",
    "metadata": {
     "hide-output": false
    },
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92e760b7",
+   "id": "04c37e59",
    "metadata": {
     "hide-output": false
    },
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae1dbf86",
+   "id": "6dbce9a2",
    "metadata": {
     "hide-output": false
    },
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76c0c48d",
+   "id": "850728c6",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed6f9fba",
+   "id": "745eaa1a",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57e7cbb8",
+   "id": "9fa4707b",
    "metadata": {
     "hide-output": false
    },
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0d3c1b1",
+   "id": "7b0e46a3",
    "metadata": {
     "hide-output": false
    },
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fe18728",
+   "id": "eb058a58",
    "metadata": {
     "hide-output": false
    },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45c3f7bc",
+   "id": "18a599cd",
    "metadata": {},
    "source": [
     "Here’s the plot of the VFI, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -784,7 +784,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95f35862",
+   "id": "a5433b9d",
    "metadata": {
     "hide-output": false
    },
@@ -801,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f164c9e4",
+   "id": "ed15c4d1",
    "metadata": {
     "hide-output": false
    },
@@ -814,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75cbd892",
+   "id": "51157aba",
    "metadata": {
     "hide-output": false
    },
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d14326f",
+   "id": "f8cebbcd",
    "metadata": {},
    "source": [
     "Here’s the plot of the optimal policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -839,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb8f4ef7",
+   "id": "3cd2074d",
    "metadata": {
     "hide-output": false
    },
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65e8f8a4",
+   "id": "6e5a5eb5",
    "metadata": {},
    "source": [
     "We observe that all the solvers produce the same output from the above three plots.\n",
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a29fa834",
+   "id": "0d4152e3",
    "metadata": {
     "hide-output": false
    },
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed12af9b",
+   "id": "d17768be",
    "metadata": {
     "hide-output": false
    },
@@ -891,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04a6fc6c",
+   "id": "5dc5b984",
    "metadata": {
     "hide-output": false
    },
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3893818e",
+   "id": "4cedc34f",
    "metadata": {
     "hide-output": false
    },
@@ -920,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f8ba880",
+   "id": "65b88d8a",
    "metadata": {
     "hide-output": false
    },
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4861b481",
+   "id": "29cf8bc6",
    "metadata": {
     "hide-output": false
    },
@@ -958,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9401c44",
+   "id": "932af7a2",
    "metadata": {
     "hide-output": false
    },
@@ -978,7 +978,7 @@
   }
  ],
  "metadata": {
-  "date": 1732064318.200644,
+  "date": 1741661035.0596542,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
