--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "227c2f21",
+   "id": "b3693d6c",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfe59b21",
+   "id": "ecebcd13",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6b2f0d8",
+   "id": "cbbcb3e0",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24d17dfa",
+   "id": "68ad7cc6",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ba8a60a",
+   "id": "830c1ff5",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ed9bc12",
+   "id": "bf933417",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -94,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49d8d613",
+   "id": "66482dcb",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad73affb",
+   "id": "05985782",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0e30836",
+   "id": "34275586",
    "metadata": {
     "hide-output": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07022a7e",
+   "id": "e7a9e432",
    "metadata": {},
    "source": [
     "### Simulating the VAR\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98c0a19a",
+   "id": "dee2505e",
    "metadata": {
     "hide-output": false
    },
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63193fdb",
+   "id": "bcf7d78a",
    "metadata": {},
    "source": [
     "### Discretizing the VAR\n",
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "359e40dd",
+   "id": "39f571bb",
    "metadata": {
     "hide-output": false
    },
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b09ec83c",
+   "id": "d2696996",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5d487aa",
+   "id": "b9cb9fba",
    "metadata": {
     "hide-output": false
    },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5113aec2",
+   "id": "db383a43",
    "metadata": {},
    "source": [
     "### Testing the discretization\n",
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60facf68",
+   "id": "4c2b6f71",
    "metadata": {
     "hide-output": false
    },
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bd6ca65",
+   "id": "66e6bb1a",
    "metadata": {
     "hide-output": false
    },
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "050f7382",
+   "id": "69bb785e",
    "metadata": {
     "hide-output": false
    },
@@ -321,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2ff93b2",
+   "id": "97a0f94b",
    "metadata": {
     "hide-output": false
    },
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a5a8c31",
+   "id": "8ec5aa38",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b20d24b",
+   "id": "6a3c1d31",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fda4b9a",
+   "id": "36949430",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e8cea0e",
+   "id": "64efc6b3",
    "metadata": {},
    "source": [
     "## Overborrowing model in Python / JAX\n",
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "163b5414",
+   "id": "1cf54f5d",
    "metadata": {
     "hide-output": false
    },
@@ -552,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f63cae1",
+   "id": "a36ad9e7",
    "metadata": {
     "hide-output": false
    },
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c82267ff",
+   "id": "dffc125e",
    "metadata": {},
    "source": [
     "Default parameter values are from Bianchi.\n",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9c6f7a6",
+   "id": "3b7ba617",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58835795",
+   "id": "0a0e9942",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -638,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f6184dd",
+   "id": "55fa25dc",
    "metadata": {
     "hide-output": false
    },
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fec3109",
+   "id": "0cf05410",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -671,7 +671,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5afa01ac",
+   "id": "b84dbf83",
    "metadata": {
     "hide-output": false
    },
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5afd1264",
+   "id": "f9bda5f3",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec070f04",
+   "id": "6ed481ee",
    "metadata": {
     "hide-output": false
    },
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e1b1ad9",
+   "id": "62c380ac",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62c70270",
+   "id": "47ebe824",
    "metadata": {
     "hide-output": false
    },
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c5f743d",
+   "id": "fdcdbdab",
    "metadata": {},
    "source": [
     "Here’s the policy operator"
@@ -788,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b0b9c6b",
+   "id": "0d42c85f",
    "metadata": {
     "hide-output": false
    },
@@ -823,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e61ed53",
+   "id": "8ee78274",
    "metadata": {
     "hide-output": false
    },
@@ -843,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9018728e",
+   "id": "b355de23",
    "metadata": {
     "hide-output": false
    },
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e34d227",
+   "id": "5f19f8e1",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "508d5e26",
+   "id": "9b0e68a8",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec5bc370",
+   "id": "797ceb0b",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bb6498e",
+   "id": "0b8efd2f",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -931,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f4dfd28",
+   "id": "2dc8b8ed",
    "metadata": {
     "hide-output": false
    },
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8eb88af",
+   "id": "ca4eb437",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e536b469",
+   "id": "688c688e",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8ab47bb",
+   "id": "5f0014bf",
    "metadata": {
     "hide-output": false
    },
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5453c736",
+   "id": "6273f730",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1070,7 +1070,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3afc6a9",
+   "id": "66977569",
    "metadata": {
     "hide-output": false
    },
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87be2a40",
+   "id": "fa57b521",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1099,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7927946",
+   "id": "0d71d86b",
    "metadata": {
     "hide-output": false
    },
@@ -1120,7 +1120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a595aee",
+   "id": "06912f2f",
    "metadata": {
     "hide-output": false
    },
@@ -1152,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2061a767",
+   "id": "1fea527c",
    "metadata": {
     "hide-output": false
    },
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d3be25c",
+   "id": "3f0f8513",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71d5d90c",
+   "id": "7ededbf5",
    "metadata": {
     "hide-output": false
    },
@@ -1196,7 +1196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f9bf2c6",
+   "id": "e10eba68",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe2d4841",
+   "id": "2e542591",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e9de673",
+   "id": "6dcf21a3",
    "metadata": {
     "hide-output": false
    },
@@ -1231,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3b72bf6",
+   "id": "ee59d9da",
    "metadata": {
     "hide-output": false
    },
@@ -1248,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cf9fbbe",
+   "id": "f52aa540",
    "metadata": {
     "hide-output": false
    },
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "822a182a",
+   "id": "6563e69c",
    "metadata": {},
    "source": [
     "### Policy plots\n",
@@ -1275,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "175f1e0d",
+   "id": "78b245cd",
    "metadata": {
     "hide-output": false
    },
@@ -1298,7 +1298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb3375f6",
+   "id": "37fbab1b",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1309,7 +1309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "911803f6",
+   "id": "b9432daa",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1317,7 +1317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92bf44b6",
+   "id": "66da2b39",
    "metadata": {},
    "source": [
     "## Exercise 20.1\n",
@@ -1335,7 +1335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "acc71163",
+   "id": "08a5479d",
    "metadata": {
     "hide-output": false
    },
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51cb7b1d",
+   "id": "0fbd9fe0",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1380,7 +1380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e268f73f",
+   "id": "d9acbc45",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#overborrow_1)"
@@ -1389,7 +1389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51b2e429",
+   "id": "f2e143c5",
    "metadata": {
     "hide-output": false
    },
@@ -1401,7 +1401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbd116e8",
+   "id": "0a5d9230",
    "metadata": {
     "hide-output": false
    },
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73a7586a",
+   "id": "06480c93",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1423,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1b0d236",
+   "id": "1af74e3e",
    "metadata": {
     "hide-output": false
    },
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8eadf9d8",
+   "id": "f1b285ef",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab955315",
+   "id": "619e2c2f",
    "metadata": {
     "hide-output": false
    },
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5253909",
+   "id": "e405b46d",
    "metadata": {},
    "source": [
     "We suppress some annoying warnings produced by the current version of `seaborn`"
@@ -1467,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e9548d5",
+   "id": "ab6aee2f",
    "metadata": {
     "hide-output": false
    },
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "069ff8de",
+   "id": "cd633044",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1488,7 +1488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adb8b142",
+   "id": "9f31af72",
    "metadata": {
     "hide-output": false
    },
@@ -1506,7 +1506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db0db851",
+   "id": "1f960c91",
    "metadata": {},
    "source": [
     "This corresponds to Figure 2 in Bianchi.\n",
@@ -1519,7 +1519,7 @@
   }
  ],
  "metadata": {
-  "date": 1732064318.3054686,
+  "date": 1741661035.16513,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
